@@ -521,29 +521,29 @@ ScoreContext = \translator {
 	metronomeMarkFormatter = #make-metronome-markup
 
 	graceSettings = #`#(
-		 ("Voice" Stem direction 1)
-		 ("Voice" Stem lengths ,(map (lambda (x) (* 0.8 x)) '(2.5 2.5 3.0 4.0 5.0)))
-		 ("Voice" Stem stem-shorten (0.4 0))
-		 ("Voice" Stem font-relative-size -1)
-		 ("Voice" NoteHead font-relative-size -1)
-		 ("Voice" Dots font-relative-size -1)
-		 ("Voice" Stem beamed-lengths  
+		 (Voice Stem direction 1)
+		 (Voice Stem lengths ,(map (lambda (x) (* 0.8 x)) '(2.5 2.5 3.0 4.0 5.0)))
+		 (Voice Stem stem-shorten (0.4 0))
+		 (Voice Stem font-relative-size -1)
+		 (Voice NoteHead font-relative-size -1)
+		 (Voice Dots font-relative-size -1)
+		 (Voice Stem beamed-lengths  
 		  ,(map (lambda (x) (* 0.8 x)) '(3.26)))
-		 ("Voice" Stem beamed-minimum-free-lengths  
+		 (Voice Stem beamed-minimum-free-lengths  
 		  ,(map (lambda (x) (* 0.8 x)) '(2.5 2.0 1.5)))
-		 ("Voice" Stem beamed-extreme-minimum-free-lengths  
+		 (Voice Stem beamed-extreme-minimum-free-lengths  
 		  ,(map (lambda (x) (* 0.8 x)) '(1.83 1.5)))
 
-		 ("Voice" Stem no-stem-extend #t)
-		 ("Voice" Beam thickness 0.384)
-		 ("Voice" Beam space-function ,(lambda (beam mult)
+		 (Voice Stem no-stem-extend #t)
+		 (Voice Beam thickness 0.384)
+		 (Voice Beam space-function ,(lambda (beam mult)
 						(* 0.8 (Beam::space_function
 							beam mult))))
-		 ("Voice" Beam position-callbacks (,Beam::least_squares
+		 (Voice Beam position-callbacks (,Beam::least_squares
 						    ,Beam::check_concave
 						    ,Beam::slope_damping))
-		 ("Staff" Accidental font-relative-size -2)
-		 ("Voice" Slur direction -1)
+		 (Staff Accidental font-relative-size -2)
+		 (Voice Slur direction -1)
 	)
 	
 	\grobdescriptions #all-grob-descriptions
